<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">LegalTracker</string>
    <string name="action_settings">Settings</string>
    <string name="StartingService">Starting Service</string>
    <string name="Status">Status</string>
    <string name="configuration">Configuration</string>
    <string name="monitor">Monitor</string>
    <string name="Location">Location</string>
    <string name="None">None</string>
    <string name="Processed">Location Processed Points</string>
    <string name="GForceProcessed">GForce Processed Points</string>
    <string name="NotYet">Not Yet</string>
    <string name="ServerURL">Server URL</string>
    <string name="SaveConfiguration">Save Configuration</string>
    <string name="CleanArchiveFiles">Clean Archive Files</string>
    <string name="ArchiveFiles">Archive Files</string>
    <string name="RefreshMonitor">Refresh Monitor</string>
    <string name="LastStatusCode">Last Location Status Code</string>
    <string name="LastGForceStatusCode">Last GForce Status Code</string>
    <string name="ResetMonitor">Reset Monitor</string>
    <string name="Uploaded">Uploaded Location Points</string>
    <string name="GForceUploaded">Uploaded GForce Points</string>
    <string name="Logged">Logged Location Points</string>
    <string name="GForceLogged">Logged GForce Points</string>
    <string name="CurrentFileSize">Current Location File Size</string>
    <string name="CurrentGForceFileSize">Current GForce File Size</string>
    <string name="PointsInBuffer">Location Points in Buffer</string>
    <string name="GForcePointsInBuffer">GForce Points in Buffer</string>
    <string name="NotProcessed">Not Processed Location Points</string>
    <string name="GForceNotProcessed">Not Processed GForce Points</string>
    <string name="LastConnectionError">Last Location Connection Error</string>
    <string name="LastGForceConnectionError">Last GForce Connection Error</string>
    <string name="GpsStatus">GPS Status</string>
    <string name="WifiStatus">Wifi Status</string>
    <string name="NotAvailable">Not Available</string>
    <string name="TestStatusCode">Test Status Code</string>
     <string name="LegalTrackerService">Legal Tracker Service</string>
     <string name="customIdentifier">Custom Identifier (license plate)</string>
</resources>
